--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -33,6 +33,11 @@
     <%= f.password_field :password_confirmation %>
   </div>
 
+  <div class="field">
+    <%= f.label :portrait %>
+    <%= f.file_field :portrait %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Create my account" %>
   </div>
