--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,3 +7,8 @@
   <strong>Email:</strong>
   <%= @user.email %>
 </p>
+
+<p>
+  <strong>Portrait:</strong>
+  <%= image_tag @user.portrait.variant(resize_to_limit: [100, 100]) if @user.portrait.present? %>
+</p>
