--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -34,8 +34,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :portrait %>
-    <%= f.file_field :portrait %>
+    <%= f.label :profile_image %>
+    <%= f.file_field :profile_image %>
   </div>
 
   <div class="actions">
